add view demo utils